# openfolio

./: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: deploy-pages.yml
src/: App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/lib/: demoPdf.ts  documentHistory.ts  exportPdf.ts  pageOperations.ts  pdfRuntime.ts  ranges.ts  signatures.ts  tauri.ts
src/styles/: app.css
tests/: documentHistory.test.ts  exportPdf.test.ts  pageOperations.test.ts  ranges.test.ts  signatures.test.ts
